computerImages now remain on the board and had to realign hit/miss dots but first child of ship square always hit if I click on the image, need to fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -130,6 +130,7 @@ body {
 .square {
   cursor: pointer;
   color: transparent;
+  position: relative;
 }
 
 .dot {
@@ -138,6 +139,8 @@ body {
   border-radius: 50%;
   margin-top: 10px;
   margin-left: 9px;
+  position: absolute;
+  z-index: 20;
 }
 
 .red-dot {
@@ -146,6 +149,11 @@ body {
 
 .black-dot {
   background-color: black;
+}
+
+#computer-dot {
+  left: -2px;
+  bottom: 8px;
 }
 
 .axis-button {
